--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,8 @@
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
+{% block header%} {% endblock %}
+
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
