--- a/templates/page/homepage/homepage2.html.twig
+++ b/templates/page/homepage/homepage2.html.twig
@@ -6,7 +6,7 @@
 <div class="main-wrapper">
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center single-col-max-width">
-			    <h2 class="heading">Portfolio</h2>
+			    <h2 class="heading">Portfolio sample</h2>
 			    <div class="intro">
 			    <p>Welcome to my online portfolio. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. I'm taking on freelance work at the moment. Want some help building your software?</p>
 			    
