--- a/templates/page/homepage/homepage.html.twig
+++ b/templates/page/homepage/homepage.html.twig
@@ -23,16 +23,16 @@
 					
 					<ul class="navbar-nav flex-column text-left">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html"><i class="fas fa-user fa-fw mr-2"></i>Profil</a>
+							<a class="nav-link" href=""><i class="fas fa-user fa-fw mr-2"></i>Profil</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="portfolio.html"><i class="fas fa-laptop-code fa-fw mr-2"></i>Portfolio</a>
+							<a class="nav-link" href=""><i class="fas fa-laptop-code fa-fw mr-2"></i>Portfolio</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('resume') }}"><i class="fas fa-file-alt fa-fw mr-2"></i>Resume</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="contact.html"><i class="fas fa-envelope-open-text fa-fw mr-2"></i>Contact</a>
+							<a class="nav-link" href=""><i class="fas fa-envelope-open-text fa-fw mr-2"></i>Contact</a>
 						</li>
 					</ul>
 				
@@ -191,7 +191,7 @@
 		    <div class="container text-center single-col-max-width">
 			    <h2 class="heading">Contact</h2>
 			    <div class="intro">
-			    <p>Vous pouvez me contacter par E-mail au : contactjonathanvalette@gmail.com.</p>
+			    <p>Vous pouvez me contacter par E-mail au : contactjonathanvalette@gmail.com</p>
 			    <ul class="list-inline mb-0">
 		            <li class="list-inline-item mb-3"> <p>Merci de votre visite</p></li>
 		        
