--- a/templates/page/homepage/homepage.html.twig
+++ b/templates/page/homepage/homepage.html.twig
@@ -16,7 +16,7 @@
 						
 						<div class="bio mb-3">Je suis un Web Développeur specialisé dans le language PHP et le Framework Symfony(5.2).</div><!--//bio-->
 						<ul class="social-list list-inline py-2 mx-auto">
-							<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i></a></li>
+							<li class="list-inline-item"><a href="https://github.com/jonathanvalette"><i class="fab fa-github-alt fa-fw"></i></a></li>
 						</ul><!--//social-list-->
 						<hr> 
 					</div><!--//profile-section-->
@@ -193,7 +193,10 @@
 			    <div class="intro">
 			    <p>Vous pouvez me contacter par E-mail au : contactjonathanvalette@gmail.com</p>
 			    <ul class="list-inline mb-0">
+				 <li class="list-inline-item"><a href="https://github.com/jonathanvalette"><i class="fab fa-github-alt fa-fw"></i></a></li>
 		            <li class="list-inline-item mb-3"> <p>Merci de votre visite</p></li>
+
+
 		        
 	                
 	            </ul><!--//social-list-->
