--- a/templates/page/homepage/homepage.html.twig
+++ b/templates/page/homepage/homepage.html.twig
@@ -64,7 +64,7 @@
 		<section class="overview-section p-3 p-lg-5">
 			<div class="container">
 				<h2 class="section-title font-weight-bold mb-3">Profil</h2>
-				<div class="section-intro mb-5">J'ai 1 an d'expèrience dans le Web Développement en tant qu'intègrateur web (Frontend) et Développeur d'applications Web (Backend).Voici un liste des technologies et/ou language que j'utilise.</div>
+				<div class="section-intro mb-5">J'ai 1 an d'expèrience dans le Web Développement en tant qu'intègrateur web (Frontend) et Développeur d'applications Web (Backend).Voici une liste des technologies et/ou language que j'utilise.</div>
 				<div class="row">
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
