--- a/templates/page/homepage/homepage.html.twig
+++ b/templates/page/homepage/homepage.html.twig
@@ -149,7 +149,7 @@
 							<div class="link-mask">
 								<a class="link-mask-link" href="project.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="http://pkdworld.com/fr/">
+									<a class="btn btn-secondary" href="http://pkdworld.com/fr/ferme-pour-travaux/">
 										<i class="fas fa-eye mr-2"></i>Voir Site (Work in progress)
 									</a>
 								</div>
